cluster/studentbee/frontend/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: studentbee-frontend
    component: frontend
    part-of: beehive
    project: exam.login.no
    confidentiality: not-defined
    compliance: not-defined
  name: studentbee-frontend
  namespace: studentbee
spec:
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  selector:
    matchLabels:
      app: studentbee-frontend
  template:
    metadata:
      labels:
        app: studentbee-frontend
        component: frontend
        part-of: beehive
        project: exam.login.no
        confidentiality: not-defined
        compliance: not-defined
    spec:
      imagePullSecrets:
        - name: gitlab-deploy-key-studentbee
      containers:
        - name: webserver
          image: registry.login.no/tekkom/web/beehive/exam.login.no/frontend:2.4.0@sha256:4d34972d68a3ce831450a1ef6cb38a35316dd2e3877066bd261fe2cf1e3d4ad1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: 3000tcp
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
          resources:
            requests:
              memory: 128Mi
              cpu: 125m
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - studentbee-frontend
                topologyKey: kubernetes.io/hostname
