cluster/studentbee/frontend/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: studentbee-frontend
  namespace: studentbee
  labels:
    app: studentbee-frontend
spec:
  type: ClusterIP
  selector:
    app: studentbee-frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
